--- a/italian/TODO
+++ b/italian/TODO
@@ -1,3 +1,11 @@
+3 settembre 2001, D. Puricelli si occuperà dei due seguenti file.
+
+ NeedToUpdate italian/events/index.wml from version 1.30 to 1.31
+ NeedToUpdate italian/intro/about.wml from version 1.31 to 1.42
+ NeedToUpdate italian/intro/cn.wml from version 1.29 to 1.31
+ NeedToUpdate italian/intro/why_debian.wml from version 1.26 to 1.28
+ NeedToUpdate italian/social_contract.wml from version 1.9 to 1.10
+
 23 agosto 2001, G.Sacco si occuperà dei due seguenti file.
 
  NeedToUpdate italian/distrib/books.wml from version 1.28 to version 1.33
