--- a/italian/TODO
+++ b/italian/TODO
@@ -5,6 +5,7 @@
  NeedToUpdate italian/intro/cn.wml from version 1.29 to 1.31
  NeedToUpdate italian/intro/why_debian.wml from version 1.26 to 1.28
  NeedToUpdate italian/social_contract.wml from version 1.9 to 1.10
+ NeedToUpdate italian/donations.wml from version 1.43 to 1.45
 
 23 agosto 2001, G.Sacco si occuperà dei due seguenti file.
 
