updated internal todo list
CVS version numbers

italian/TODO: 1.3 -> 1.4

--- a/italian/TODO
+++ b/italian/TODO
@@ -1,3 +1,7 @@
+7 agosto 2001, G.Sacco
+
+ italian/distrib/books.wml aggiornato.
+
 3 settembre 2001, D. Puricelli si occuperà dei due seguenti file.
 
  NeedToUpdate italian/events/index.wml from version 1.30 to 1.31
