--- a/italian/TODO
+++ b/italian/TODO
@@ -1,8 +1,16 @@
-7 agosto 2001, G.Sacco
+8 settembre 2001, D.Puricelli
+
+ italian/events/index.wml aggiornato.
+ italian/intro/cn.wml aggiornato.
+ italian/intro/why_debian.wml aggiornato.
+ italian/social_contract.wml aggiornato.
+ italian/donations.wml aggiornato.
+
+7 settembre 2001, G.Sacco
 
  italian/distrib/books.wml aggiornato.
 
-3 settembre 2001, D. Puricelli si occuperà dei due seguenti file.
+3 settembre 2001, D. Puricelli si occuperà dei sei seguenti file.
 
  NeedToUpdate italian/events/index.wml from version 1.30 to 1.31
  NeedToUpdate italian/intro/about.wml from version 1.31 to 1.42
