The presentacion of the Debian proyect (in Spanish) is now compiled on it's own so there's no need to clobber the archive with binary files. (jfs)
CVS version numbers

spanish/international/Spanish.wml: 1.34 -> 1.35 
spanish/international/spanish/contrib/Makefile: 1.3 -> 1.4 
spanish/international/spanish/contrib/presentacion-debian.pdf: 1.1 -> 1.2(DEAD) 
spanish/international/spanish/contrib/presentacion-debian.ps.gz: 1.1 -> 1.2(DEAD) 
spanish/international/spanish/contrib/presentacion-debian.tex: 1.1 -> 1.2(DEAD) 
spanish/international/spanish/contrib/presentacion/Makefile: INITIAL -> 1.1 
spanish/international/spanish/contrib/presentacion/presentacion.tex: INITIAL -> 1.1

--- a/spanish/international/spanish/contrib/presentacion/presentacion.tex
+++ b/spanish/international/spanish/contrib/presentacion/presentacion.tex
@@ -7,17 +7,8 @@
 \usepackage{geometry}
 
 \title{El proyecto Debian GNU/Linux}
-\author{Javier Fernández-Sanguino Peña \thanks{
-    \copyright Pepito Grillo y Pepote Grillote. Se otorga permiso para copiar,
-    distribuir y/o modificar este documento bajo los términos de la
-    Licencia de Documentación Libre GNU, Versión 1.1 o cualquier otra
-    versión posterior publicada por la Free Software Foundation. Se
-    considerará como Secciones Invariantes todo el documento, no
-    habiendo Textos de Portada ni Textos de Contra Portada. Puede
-    consultar una copia de la licencia en:
-    http://www.gnu.org/copyleft/fdl.html}\\
-    \htmailto{jfs@debian.org}}
-\date{Agosto 2000}
+\author{Javier Fernández-Sanguino Peña}
+\date{Septiembre 2001}
 
 \begin{document}
 \maketitle
@@ -38,10 +29,6 @@ El proyecto Debian GNU/Linux es uno de los más ambiciosos proyectos de
 software libre en la actualidad, agrupando a un gran número de
 desarrolladores dispersos geográficamente que trabajan con un único
 objetivo: crear un sistema operativo totalmente libre.
-
-En esta ponencia se van a tratar las experiencias de un desarrollador
-dentro de esta comunidad y analizar algunas de las formas en las que
-otras personas interesadas pueden colaborar.
 \end{abstract}
 
 
@@ -55,13 +42,12 @@ programas libres.
 
 El sistema operativo es el conjunto de programas básicos y utilidades
 que hacen que funcione un ordenador. En el corazón de un sistema
-operativo está el núcleo. El núcleo (kernel) es el programa mas
+operativo está el núcleo. El núcleo (kernel) es el programa más
 importante de la computadora, hace todas las cosas de mantenimiento
 básico y le permite ejecutar otros programas. Debian es
 independiente del núcleo. Actualmente usa el núcleo de
-\htlink{Linux}{http://www.linux.org/}, pero se está trabajando en
-proveer con Debian otros núcleos, usando
-\htlink{Hurd}{http://www.gnu.org/software/hurd/hurd.html}.
+\htlink{Linux}{http://www.linux.org/}, pero Debian también puede funcionar
+con el \htlink{Hurd}{http://www.gnu.org/software/hurd/hurd.html}.
 
 
 Debian ha crecido mucho desde sus principios hasta convertirse en una
@@ -101,20 +87,26 @@ el kernel 2.0 de Linux y soporte completo de ELF.
 \item {\bf Bo (1.3)} saldría en julio de 1997, tendría 974 paquetes y 200
 desarrolladores.
 
-\item La versión: {\bf Hamm} vio la luz en julio de 1998, cuenta con
+\item La versión: {\bf Hamm (2.0)} vio la luz en julio de 1998, cuenta con
 más de 1500 paquetes en los que trabajan más de 400 desarrolladores,
 tiene pleno soporte de libc6, aunque aún mantiene librerías para los
 programas compilados con libc5.
 
-\item La siguiente versión: {\bf Slink} se distribuyó el 9 de marzo de
+\item La siguiente versión: {\bf Slink (2.1)} se distribuyó el 9 de marzo de
 1999. Contando con más de 2500 paquetes, y consta de cuatro cd-roms,
 dos de binarios y dos de fuentes. Para solventar problemas de
 seguridad descubiertos así como errores relacionados con el año 2000
 se realizaron hasta cinco revisiones de esta versión.
 
-\item La versión actual {\bf Potato} ha sido liberada el 15 de agosto
-del año 2000. Cuenta con más de 4000 paquetes de software y, sólo en
-binarios, iguala a la versión anterior (binarios y fuentes).
+\item La versión actual {\bf Potato (2.2)} se distribuyó 15 de agosto del
+año 2000. Cuenta con más de 4000 paquetes de software y, sólo en
+binarios, iguala a la versión anterior (binarios y fuentes). Ha habido
+tres revisiones de esta versión, solucionando problemas graves
+y de seguridad detectados.
+
+\item La versión en preparación {\bf Woody (3.0)}, que está próxima a ser
+distribuida. Supera a la anterior con más de 6000 paquetes de
+software.
 
 \end{itemize}
 
@@ -123,17 +115,17 @@ Pero el crecimiento de Debian no ha sido solamente en la cantidad de
 programas incluidos en la distribución, sino también en el número de
 personas que trabaja en ella; actualmente cuenta con más
 desarrolladores que cualquier otra distribución de GNU/Linux. Y ha
-sido reconocida de forma internacional por multitud de compañías: 
+sido reconocida de forma internacional por multitud de entidades:
 \begin{itemize}
+\item \htlink{El Gobierno Australiano}{http://www.debian.org/News/2001/20010727}
+\item \htlink{HP}{http://http://www.computerworld.com/cwi/story/0,1199,NAV47_STO60507,00.html}
 \item \htlink{IBM Global Services}{http://www.debian.org/News/weekly/2000/20000408}
 \item \htlink{Compaq}{http://www.debian.org/News/weekly/2000/20000302}
 \item \htlink{France Telecom}{http://www.debian.org/News/weekly/1999/19990917}
 \item \htlink{Corel}{http://www.debian.org/News/weekly/1999/19990421a}
 \item \htlink{eBay}{http://www.debian.org/News/weekly/1999/19991020}
-\item \htlink{VA Linux
-Systems}{http://www.debian.org/News/weekly/1999/19991012}
-\item \htlink{Linux Hardware
- Solutions}{http://www.debian.org/News/weekly/1999/19990225a}
+\item \htlink{VA Linux Systems}{http://www.debian.org/News/weekly/1999/19991012}
+\item \htlink{Linux Hardware Solutions}{http://www.debian.org/News/weekly/1999/19990225a}
 \end{itemize}
 
 Esto sin contar las múltiples donaciones de equipamiento que ha
@@ -152,10 +144,10 @@ se desea distribuir software con errores. Por esta razón, se ha
 retrasó, por ejemplo, la versión 2.0 de Debian hasta que se han
 arreglado bugs, tanto por los problemas de pasar todos los programas a
 libc6 como de agujeros de seguridad que se hubieran descubierto
-entonces. Algo que, por ejemplo, 
+entonces. Algo que, por ejemplo,
 \htlink{RedHat}{http://www.redhat.com} no hizo en el mismo momento,
 habiéndose visto obligada a distribuir RedHat 5.1 inmediatamente
-después de 5.0 para arreglar muchos de los agujeros de seguridad
+después de 5.0 para arreglar muchos de los problemas de seguridad
 existente en los programas con los que se distribuía.
 
 En segundo lugar, dada su actitud abierta a la participación de todos,
@@ -165,10 +157,11 @@ solamente haciendo paquetes de programas, sino colaborando en el
 servidor de web, traduciendo documentación de Debian, documentando
 fallos, o ayudando a los usuarios, a través de
 \htlink{listas de correo}{http://www.debian.org/MailingLists} o de
-otras herramientas como la \htlink{FAQ-o-matic}{http://www.debian.org/cgi-bin/fom}, a resolver los problemas que tienen con la
-distribución. Este servicio es, sin duda, mucho más ágil, rápido y
-eficaz que el ofrecido en muchas ocasiones por las compañías de
-software.
+otras herramientas como la
+\htlink{FAQ-o-matic}{http://www.debian.org/cgi-bin/fom}, a resolver
+los problemas que tienen con la distribución. Este servicio es, sin
+duda, mucho más ágil, rápido y eficaz que el ofrecido en muchas
+ocasiones por las compañías de software.
 
 En el lado de desventajas hay que decir que Debian tiene un mayor
 componente técnico que otras distribuciones. También, dada la
@@ -217,11 +210,11 @@ SPI gestiona las marcas registradas: {\sl Open Source}, {\sl Open
 Hardware}, y {\sl Debian}.
 
 Sin embargo, Debian tiene a su vez su propia organización, con un
-Presidente (actualmente Wichert Ackerman), un Secretario (Darren
-Benham) y un Comité Técnico; así como un gran número de personas
-encargados de distintas áreas del desarrollo de Debian, desde la
-producción de CDs, a la seguridad pasando por el sistema de
-seguimiento de errores ({\sl Bugs}.
+Presidente (actualmente Ben Collins), un Secretario y un Comité
+Técnico; así como un gran número de personas encargados de distintas
+áreas del desarrollo de Debian, desde la producción de CDs, a la
+seguridad pasando por el sistema de seguimiento de errores ({\sl
+Bugs}.
 
 Y, a continuación, toda el grupo de desarrolladores que, de forma
 altruista al igual que los anteriores, donan parte de su tiempo para
@@ -234,7 +227,7 @@ hecho, a lo largo de su historia, que Debian creciera en ambos
 aspectos.
 
 Debian cuenta, en el momento de escribir este artículo, con cerca de
-500 desarrolladores (consulte el \htlink{mapa de
+600 desarrolladores (consulte el \htlink{mapa de
 desarrolladores}{http://www.debian.org/devel/developers.loc})
 distribuidos por todo el globo. Evidentemente, no todos tienen el
 mismo nivel de compromiso, dentro de éstos hay personas dedicadas a
@@ -247,16 +240,16 @@ y personas que colaboran de forma esporádica.
 Los desarrolladores toman las decisiones que sean necesarias para el
 funcionamiento del Proyecto, a través de un sistema de votaciones que
 se inauguró para votar su Constitución, y ha sido utilizado en muchas
-ocasiones: elección de nuevos presidentes, selección del logo,
+ocasiones: elección de nuevos presidentes, selección del logotipo,
 decisiones sobre la política de Debian, etc.. La gran mayoría de las
 discusiones se realizan a través de correo electrónico ya que es el
 único medio que puede permitir a tantas personas colaborar de forma
-organizada. 
+organizada.
 
 Los Desarrolladores Debian están involucrados en una gran variedad de
 tareas, incluyendo la administración del \htlink{Servidor de
 Web}{http://www.debian.org/} y
-\htlink{FTP}{ftp://ftp.debian.org/}, diseño gráfico, análisis
+\htlink{Servidor de FTP}{ftp://ftp.debian.org/}, diseño gráfico, análisis
 legal de licencias de software, escribir documentación y, por
 supuesto, mantener paquetes de software.
 
@@ -337,9 +330,9 @@ errores se encuentren y arreglen rápidamente.
 
 La atención de Debian al detalle permite producir un distribución de
 alta calidad, estable y escalable. La instalación puede configurarse
-fácilmente para servir muchos perfiles, desde cortafuegos reducidos a
-lo mínimo, estaciones de trabajo científicas a servidores de red de
-alta gama.
+fácilmente para servir muchos perfiles, desde cortafuegos reducidos
+con el menor número de servicios imprescindible, pasando por
+estaciones de trabajo científicas a servidores de red de alta gama.
 
 
 El sistema que distingue a Debian de otras distribuciones GNU/Linux es
@@ -354,12 +347,16 @@ compilado vd. mismo y qué dependencias cumple.
 
 Para proteger su sistema contra caballos de troya y otros programas
 malévolos, Debian verifica que los paquetes provienen de sus
-mantenedores Debian auténticos. Los empaquetadores de Debian también
-ponen gran cuidado en configurarlos de forma segura. Si se declara un
-problema de seguridad con los paquetes entregados, los parches están
-por lo general rápidamente disponibles. Con el sencillo sistema de
-actualización de Debian, se pueden descargar e instalar arreglos de
-seguridad automáticamente a través de Internet.
+mantenedores Debian auténticos utilizando sistemas de clave
+pública. Los empaquetadores de Debian también ponen gran cuidado en
+configurarlos de forma segura. Si se declara un problema de seguridad
+con los paquetes entregados, los parches están por lo general
+rápidamente disponibles. Con el sencillo sistema de actualización de
+Debian, se pueden descargar e instalar arreglos de seguridad
+automáticamente a través de Internet. Los usuarios también pueden
+verificar que el software descargado no ha sido manipulado dado que
+incorpora los mismos mecanismos de sistemas de clave pública para
+verificar su integridad.
 
 El principal, y mejor, método para obtener soporte de un sistema
 Debian GNU/Linux y comunicarse con los Desarrolladores Debian es a
@@ -399,8 +396,8 @@ La publicación Debian 2.2 es la primera versión de Debian que incluye
   europeos, con más y mejores traducciones a muchos idiomas.
 
 El número de paquetes que incluye la distribución principal
-  está ahora alrededor de 2500, aumentando en más de
-  50\%, como es habitual (de hecho son 1200 paquetes nuevos). Algunos
+  está ahora alrededor de 4000, aumentando en más de
+  50\%, como es habitual (de hecho son 1500 paquetes nuevos). Algunos
   de los nuevos paquetes son:
 
 
@@ -480,7 +477,8 @@ El Proyecto Debian ha deseado siempre ser base de distribuciones más
 especializadas, y el pasado año este objetivo se ha realizado, con la
 adopción del sistema Debian como base de distribuciones de Linux
 comerciales.  Entre otras compañías Corel Corporation, Libra Computer
-Systems, y Stormix Technologies están publicando distribuciones
+Systems, Stormix Technologies y Progeny Linux Systems 
+están publicando distribuciones
 basadas en Debian; y se esperan otras. Además, se han publicado CDs de
 Debian GNU/Linux junto con distintos libros sobre Debian.
 
@@ -496,6 +494,56 @@ toda su vida contra la \htlink{Distrofia Muscular de
 Duchenne}{http://mdausa.org}. Por ello, el nombre de la última versión
 es Debian 2.2 'potato' la distribución ``Joel 'Espy' Klecker''.
 
+%\section{La futura versión estable: Debian Woody}
+% Hablar de las cosas que trae Woody en cuanto a versiones (glib 2.1)
+% software y arquitecturas: ia64 y hppa
+% software nuevo interesante: FAI 2.0 (instalacion automatica)
+% MOSIX (balanceo carga)
+% reiserfs
+% Actualizacion:
+% KDE 2.2
+% gcc 3.0
+% XFREE 4.1
+% kernel 2.2.4
+% glibc 2.2
+% Perl 5.6
+% GNOME 1.4
+
+
+\section{La diferencia entre la la versión estable y la
+      inestable}
+
+Debian sigue unas fases claramente definidas en el desarrollo y
+publicación de sus versiones. En primer lugar, existe una versión en
+desarrollo, conocida como ``inestable'', a la cual se van incorporando
+nuevos programas, nuevas versiones de programas y se van corrigiendo
+bugs y errores. Tras ese periodo, la versión inestable se ``congela'',
+y a partir de ese momento ya no se aceptan nuevos programas y se
+dedica todo el esfuerzo a realizar diversos ciclos de prueba,
+notificación y corrección intensiva de bugs o errores. Una vez
+corregidos todos los bugs críticos o retiradas aquellas aplicaciones
+cuyos errores críticos no ha dado tiempo a corregir, se ``libera'': se
+tiene entonces la ``versión estable''.
+
+Sin embargo, ``Inestable'' en Debian no significa ``peligroso'' o
+``inseguro'', sino ``en desarrollo''. Para usos no críticos es
+perfectamente utilizable y en general un usuario encontrará que a
+menudo la versión inestable de Debian no lo es más que las versiones
+definitivas de otras distribuciones comerciales. No obstante, para
+servicios críticos es recomendable utilizar la versión estable, que es
+la que está probada intensivamente y depurada.
+
+El tiempo de salida de una nueva versión de Debian es alto y esto se
+debe a su estricto sistema de depuración de errores, a carecer de
+urgencias comerciales, a mantenerse con el trabajo sin remunerar y en
+ratos libres de los desarrolladores, y al inmenso número de paquetes
+que, en los últimos tiempos, se ha hecho difícilmente manejable. El
+objetivo de la versión estable de Debian no es ``estar a la última'',
+sino conseguir un sistema robusto y fiable con los menos fallos
+posibles. Quien necesite tener acceso a las últimas versiones de los
+programas y a nuevas aplicaciones puede usar la versión inestable, o
+bien puede buscar paquetes no oficiales o incluso realizar uno mismo
+el paquete o la compilación.
 
 \section{Conclusiones}
 
@@ -509,16 +557,21 @@ entre lo que sería en realidad, esencialmente, la {\em misma}
 distribución, esto no sucede en Debian.
 
 Notorio es por ejemplo, el hecho de los esfuerzos duplicados en
-distribuciones derivadas de RedHat, como Esware, Hispafuentes, o
-Eurielec Linux, debido a la imposibilidad de contribuir los muchos
-esfuerzos realizados por las personas a la distribución ``original''
-lo que tiene como resultado el desarrollo de productos
-divergentes. Debian es, al contrario, un punto de concentración. Si se
-quiere, se puede entender como una ``enana blanca'', en lugar de
-explotar como una ``supernova'' extendiendo sus restos por el universo
-conocido, o llevar al olvido todo lo que pase próximo como
-haría un ``agujero negro''; seguirá absorbiendo materia, gracias a su
-fuerte gravedad, y viviendo mucho, mucho más tiempo.
+distribuciones derivadas de RedHat en el entorno hispano, como Esware,
+Hispafuentes, o Eurielec Linux, debido a la imposibilidad de
+contribuir los muchos esfuerzos realizados por las personas a la
+distribución ``original'' lo que tiene como resultado el desarrollo de
+productos divergentes. De igual forma, se puede hablar de las
+distribuciones derivadas de RedHat en entornos más globales como SuSE
+o Mandrake.
+
+
+Debian es, al contrario, un punto de concentración. Si se quiere, se
+puede entender como una ``enana blanca'', en lugar de explotar como
+una ``supernova'' extendiendo sus restos por el universo conocido, o
+llevar al olvido todo lo que pase próximo como haría un ``agujero
+negro''; seguirá absorbiendo materia, gracias a su fuerte gravedad, y
+viviendo mucho, mucho más tiempo.
 
 \section{Más información}
 
@@ -539,4 +592,3 @@ Debian}{http://www.debian.org/distrib/}
 
 
 
- LocalWords:  document
