Added some information regarding the author
CVS version numbers

spanish/international/spanish/contrib/presentacion/presentacion.tex: 1.1 -> 1.2

--- a/spanish/international/spanish/contrib/presentacion/presentacion.tex
+++ b/spanish/international/spanish/contrib/presentacion/presentacion.tex
@@ -29,6 +29,8 @@ El proyecto Debian GNU/Linux es uno de los más ambiciosos proyectos de
 software libre en la actualidad, agrupando a un gran número de
 desarrolladores dispersos geográficamente que trabajan con un único
 objetivo: crear un sistema operativo totalmente libre.
+
+Palabras clave: sistema operativo, linux, software libre
 \end{abstract}
 
 
@@ -586,6 +588,16 @@ estable}{http://www.debian.org/releases/stable/}
 Debian}{http://www.debian.org/distrib/}
 \item \htlink{El proyecto de documentación de Debian}{http://www.debian.org/doc/ddp}
 
+\section{Sobre el autor}
+
+Javier Fernández-Sanguino es miembro del proyecto Debian desde 
+enero de 1998. Dentro del proyecto es el coordinador del proyecto de
+internacionalización al castellano de la distribución Debian GNU/Linux,
+miembro del grupo de trabajo del sitio web, y mantiene  más de sesenta
+paquetes de software que varían desde aplicaciones para usuarios
+finales a herramientas de desarollo y seguridad. Igualmente es colaborador
+habitual de revistas relacionadas con GNU/Linux.
+ 
 \end{itemize}
 
 \end{document}
