--- a/italian/TODO
+++ b/italian/TODO
@@ -1,3 +1,8 @@
+9 ottobre 2001, G. Sacco
+ NeedToUpdate italian/international/index.wml from version 1.28 to version 1.30
+ NeedToUpdate italian/intro/why_debian.wml from version 1.30 to version 1.35
+ NeedToUpdate italian/mirror/submit.wml from version 1.27 to version 1.28
+
 8 settembre 2001, D.Puricelli
 
  italian/events/index.wml aggiornato.
