--- a/italian/TODO
+++ b/italian/TODO
@@ -1,3 +1,11 @@
+
+22 ottobre 2001, G. Sacco
+ NeedToUpdate italian/devel/passwordlessssh.wml from version 1.1 to version 1.3
+ NeedToUpdate italian/international/index.wml from version 1.28 to version 1.30
+
+ italian/devel/passwordlessssh.wml aggiornato
+ italian/international/index.wml aggiornato
+
 9 ottobre 2001, G. Sacco
  NeedToUpdate italian/international/index.wml from version 1.28 to version 1.30
  NeedToUpdate italian/intro/why_debian.wml from version 1.30 to version 1.35
