italian locks on wml files.
CVS version numbers

italian/TODO: 1.8 -> 1.9

--- a/italian/TODO
+++ b/italian/TODO
@@ -1,4 +1,6 @@
 8 novembre 2001, G. Sacco
+ NeedToUpdate italian/intro/about.wml from version 1.31 to version 1.43
+ NeedToUpdate italian/intro/why_debian.wml from version 1.30 to version 1.35
 
  italian/News/2001/index.wml NUOVO
  italian/News/2001/20011105.wml NUOVO (rilascio 2.2r4)
