--- a/italian/TODO
+++ b/italian/TODO
@@ -1,3 +1,7 @@
+10 novembre 2001, G. Sacco
+ italian/intro/about.wml aggiornato
+ italian/intro/why_debian.wml aggiornato
+
 8 novembre 2001, G. Sacco
  NeedToUpdate italian/intro/about.wml from version 1.31 to version 1.43
  NeedToUpdate italian/intro/why_debian.wml from version 1.30 to version 1.35
