Update to italian trace file.
CVS version numbers

italian/TODO: 1.10 -> 1.11

--- a/italian/TODO
+++ b/italian/TODO
@@ -1,3 +1,6 @@
+13 novembre 2001, G. Sacco
+ italian/News/weekly/2001/index.wml version 1.1		aggiornato
+
 10 novembre 2001, G. Sacco
  italian/intro/about.wml aggiornato
  italian/intro/why_debian.wml aggiornato
