--- a/italian/TODO
+++ b/italian/TODO
@@ -1,4 +1,6 @@
 13 novembre 2001, G. Sacco
+ Missing italian/security/faq.wml version 1.10
+
  italian/News/weekly/2001/index.wml version 1.1		aggiornato
 
 10 novembre 2001, G. Sacco
